.provarCaches/00D6C0000000xA6UAI/objects/redwing__Answer_Sequence__c.object
<CustomObject>
    <fields>
        <fullName>Dev_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Dev External ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Internal_Notes__c</fullName>
        <label>Internal Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>redwing__Items_Last_Index__c</fullName>
        <label>Items Last Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Answer Sequence</label>
    <listViews>
        <fullName>redwing__All</fullName>
        <columns>NAME</columns>
        <columns>redwing__Internal_Notes__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ASQ-{0000000}</displayFormat>
        <label>Answer Sequence ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Answer Sequences</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>